Closed
Bug 354474
Opened 19 years ago
Closed 19 years ago
Crash if using trace-malloc and -no-remote parameter during launch.
Categories
(Toolkit :: Startup and Profile System, defect)
Toolkit
Startup and Profile System
Tracking
()
RESOLVED
FIXED
People
(Reporter: sylvain.pasche, Unassigned)
Details
(Keywords: crash)
Attachments
(1 file)
|
745 bytes,
patch
|
benjamin
:
first-review+
|
Details | Diff | Splinter Review |
Looks like a regression from bug 239929.
| Reporter | ||
Comment 1•19 years ago
|
||
Attachment #240308 -
Flags: first-review?(benjamin)
Updated•19 years ago
|
Attachment #240308 -
Flags: first-review?(benjamin) → first-review+
Comment 2•19 years ago
|
||
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
You need to log in
before you can comment on or make changes to this bug.
Description
•