Bug 354474 - Feed gArgv/c into trace-malloc to prevent crashes when using -no-remote, patch by Silvain Pasche <sylvain.pasche@gmail.com>, r=me